[package]
name = "sf-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
axum = { version = "0.6.1", features = ["headers"] }
headers = "0.3.8"
http = "0.2.8"
oauth2 = "4.3.0"
reqwest = { version = "0.11.13", features = ["rustls-tls", "json"] }
serde = "1.0.148"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
